--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
     "require": {
         "symfony/http-foundation": "^3.4",
         "jenssegers/blade": "^1.1",
-        "nesbot/carbon": "^1.22"
+        "nesbot/carbon": "^1.22",
+        "monolog/monolog": "^1.23",
+        "guzzlehttp/guzzle": "~6.0",
+        "catfan/Medoo": "^1.5"
     },
     "autoload": {
         "psr-4": {
